[gd_scene load_steps=2 format=3 uid="uid://cs4pirro52sxm"]

[ext_resource type="Script" path="res://animal.gd" id="1_1q27x"]

[node name="Animal" type="Node2D"]
script = ExtResource("1_1q27x")

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -141.0
offset_right = 117.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0

[node name="NameLabel" type="Label" parent="Panel"]
offset_left = 8.0
offset_top = 6.0
offset_right = 116.0
offset_bottom = 32.0
text = "#animalname"

[node name="HPLabel" type="Label" parent="Panel"]
offset_left = 8.0
offset_top = 25.0
offset_right = 116.0
offset_bottom = 51.0
text = "HP: #/#"

[node name="AttackLabel" type="Label" parent="Panel"]
offset_left = 8.0
offset_top = 51.0
offset_right = 116.0
offset_bottom = 77.0
text = "Attack: #"

[node name="APLabel" type="Label" parent="Panel"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 8.0
offset_right = 116.0
offset_bottom = 34.0
grow_vertical = 2
text = "AP: #"

[node name="ActionLabel" type="Label" parent="Panel"]
offset_left = 8.0
offset_top = 92.0
offset_right = 124.0
offset_bottom = 118.0
text = "#currentaction"

[node name="Icon" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -15.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Icon"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="pressed" from="Icon/Button" to="." method="_on_button_pressed"]
